<resources>
    <string name="app_name">RestaurantE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="i_am_employee">I am employee</string>
    <string name="login_admin">Login Admin</string>
    <string name="make_reservation">Make Reservation</string>
    <string name="next">Next</string>
    <string name="desserts">Desserts</string>
    <string name="drinks">Drinks</string>
    <string name="foods">Foods</string>
    <string name="ok">Ok</string>
    <string name="phone">Phone</string>
    <string name="select_date">Select Date</string>
    <string name="login">Login</string>
    <string name="resservation_number">Resservation Number</string>
    <string name="name">Name</string>
    <string name="order">Order</string>
    <string name="pre_order">Pre Order</string>

    <string-array name="String_tables">
        <item> table1(2 people)</item>
        <item>table2(2 people)</item>
        <item>table3(6 people)</item>
        <item>table4(4 people)</item>
    </string-array>

    <string-array name="String_hours">
        <item> 14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
    </string-array>


</resources>
