<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PageViwer.ProductTab">

    <com.google.android.material.tabs.TabLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/productstablayout">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/foods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foods"
            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/drinks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drinks" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/desserts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desserts" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viwpager"
        android:layout_width="446dp"
        android:layout_height="616dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productstablayout"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/nexttopay_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_wh_gray"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viwpager" />

</androidx.constraintlayout.widget.ConstraintLayout>