<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reservation"
    android:background="@color/colorPrimary" >


    <ImageView

        android:id="@+id/imgRestlogo"
        android:layout_width="wrap_content"
        android:layout_height="247dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:src="@drawable/restaurant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="421dp"
        android:layout_below="@id/imgRestlogo"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="-1dp"
        android:background="@color/linear"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.272"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="" />

        <EditText
            android:id="@+id/EditText_Phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="Phone"
            android:inputType="phone"
            android:text="Phone"
            app:layout_constraintBottom_toTopOf="@+id/TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.272"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_Name"
            app:layout_constraintVertical_bias="0.441" />

        <TextView
            android:id="@+id/TextView"
            android:layout_width="217dp"
            android:layout_height="41dp"
            android:layout_marginBottom="16dp"
            android:text="@string/select_date"
            app:layout_constraintBottom_toTopOf="@+id/spinner_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.278"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/spinner_time"
            android:layout_width="208dp"
            android:layout_height="35dp"
            android:layout_marginTop="156dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.266"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_Name" />

        <Spinner
            android:id="@+id/spinner_table"
            android:layout_width="217dp"
            android:layout_height="38dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.278"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_time" />

        <Button
            android:id="@+id/button_OkReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="336dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/btn_wh_gray"
            android:text="@string/ok"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>